fixed navmenu button display
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@1776 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/themes/mac_ox_x/style.css
+++ b/devel/themes/mac_ox_x/style.css
@@ -397,6 +397,9 @@ a:hover {
         text-decoration: none;
 }
 
+.navmenu_pic {
+        margin-top: 5px;
+}
 
 .admin_menu_thumb {
         font-size: 90%;
