SPLIT {MAIN_MENU} -> {SYS_MENU} & {SUB_MENU}, added {VANITY} for Powered BY PHP & MySQL, XHTML, CSS Validation fixed the sub_menu being in the wrong place when there is a custom header removed all tables from the template.html its all css now.
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@1798 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/themes/project_vii/style.css
+++ b/devel/themes/project_vii/style.css
@@ -559,7 +559,7 @@ td #admin_menu_anim {
 }
 
 .clickable_option {
-        cursor : hand;
+        cursor : default;
 }
 
 .listbox_lang {
@@ -568,4 +568,29 @@ td #admin_menu_anim {
         border: 1px solid #FAFAFA;
         font-size: 80%;
         vertical-align : middle;
+}
+#SUB_MENU {
+        width:100%;
+        padding: 0 20px;
+}
+
+#SYS_MENU {
+        position:relative;
+        bottom:3px;
+        display: block;
+        width:800px;
+        height:10px;
+        padding: 0px;
+        z-index:1;
+        visibility: hidden;
+}
+
+#SELECT_LISTS,#SELECT_FLAGS,#GALLERY {
+    padding: 0 20px;
+    text-align: center;
+}
+
+#CUSTOM_FOOTER,#CUSTOM_HEADER {
+    margin:0;
+    padding:0;
 }
