--- a/devel/themes/mac_ox_x/style.css
+++ b/devel/themes/mac_ox_x/style.css
@@ -1,6 +1,21 @@
-/*
-$Id$
-*/
+/*************************
+  Coppermine Photo Gallery
+  ************************
+  Copyright (c) 2003-2005 Coppermine Dev Team
+  v1.1 originaly written by Gregory DEMAR
+
+  This program is free software; you can redistribute it and/or modify
+  it under the terms of the GNU General Public License as published by
+  the Free Software Foundation; either version 2 of the License, or
+  (at your option) any later version.
+  ********************************************
+  Coppermine version: 1.4.1
+  $Source$
+  $Revision$
+  $Author$
+  $Date$
+**********************************************/
+
 /* Foreground color definition */
 body { color : #000000; }
 
@@ -124,7 +139,7 @@ li {
         background-repeat:no-repeat;
         background-position:right;
 }
-                  
+
 
 
 .top_menu_bttn a {
