--- a/cpgNG/templates/2bornot2b/main.html
+++ b/cpgNG/templates/2bornot2b/main.html
@@ -84,35 +84,8 @@
 {$CONTENT}
 <img src="images/spacer.gif" width="1" height="17" alt="" /><br />
 <p style="color:white; text-align: center;">Syndicate this page with <a href="rss.php?album=1">RSS1.0</a></p><div class="footer" align="center" style="padding-top: 10px;">Powered by <a href="http://coppermine.sourceforge.net/" title="Coppermine Photo Gallery" rel="external">Coppermine Photo Gallery</a></div></div>
-<!--
-<p align="center"><a href="http://validator.w3.org/check?uri=http%3A%2F%2Ftariquesani.net%2Findex.php"><img
-
-          src="http://www.w3.org/Icons/valid-xhtml10"
-
-          alt="Valid XHTML 1.0!" height="31" width="88" border="0" />
-
-</a>
-
-<a href="http://jigsaw.w3.org/css-validator/check/referer">
-
-  <img style="border:0; width:88px; height:31px"
-
-       src="http://jigsaw.w3.org/css-validator/images/vcss"
-
-       alt="Valid CSS!" />
-
-</a>
-
-<a
-href="http://feedvalidator.org/check.cgi?url=http://www.tariquesani.net/rss.php"><img
-src="themes/2bornot2b/images/valid-rss.png" alt="[Valid RSS]" title="Validate my RSS feed"
-width="88" height="31" border="0"/></a>
-
-</p>
--->
 </div>
-
-<!--Coppermine Photo Gallery 1.4.0 (alpha)-->
+<!--Coppermine Photo Gallery Next Generation (alpha)-->
 </body>
 
 </html>
