changed the debug_text color to white
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@1895 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpgNG/templates/2bornot2b/style.css
+++ b/cpgNG/templates/2bornot2b/style.css
@@ -1196,7 +1196,7 @@ tableh2_compact {
 
         border: #BDBEBD;
 
-        background-color: #000000;
+        background-color: #FFFFFF;
 
         width : 100%;
 
