corrected the variable names to avoid warnings
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@1898 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpgNG/templates/2bornot2b/common/index.html
+++ b/cpgNG/templates/2bornot2b/common/index.html
@@ -1,4 +1,4 @@
-{if $breadcrumHTML ne ""}
+{if $breadcrumbHTML ne ""}
 <!-- Breadcrum for category Starts-->
 {$breadcrumbHTML}
 <!-- Breadcrum for category Ends-->
