removed commented code
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@1917 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpgNG/templates/2bornot2b/main.html
+++ b/cpgNG/templates/2bornot2b/main.html
@@ -79,7 +79,11 @@
   </div>
 </div>
 <div id="content"><div class="innerdiv">
+{if $breadcrumbHTML ne ""}
+<!-- Breadcrum for category Starts-->
 {$breadcrumbHTML}
+<!-- Breadcrum for category Ends-->
+{/if}
 <!-- CONTENT -->
 {$CONTENT}
 <img src="images/spacer.gif" width="1" height="17" alt="" /><br />
