Ergonomic and cosmetic changes
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@1925 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/installer.css
+++ b/devel/installer.css
@@ -214,3 +214,14 @@ p.warning, div.warning
 {
     text-align: center;
 }
+
+fieldset
+{
+    width: 90ex;
+    margin: 5px auto;
+}
+
+fieldset form
+{
+    margin: auto 10px;
+}
