--- a/cpgNG/templates/common/category.html
+++ b/cpgNG/templates/common/category.html
@@ -54,7 +54,7 @@
                         <a href="delete.php?id={$item.cat_albums[element].aid}&amp;what=album" class="adm_menu" onclick="return  confirm('{$lang_album_admin_menu.confirm_delete}');">{$lang_album_admin_menu.delete}</a>
                       </td>
                       <td align="center" valign="middle" class="admin_menu">
-                        <a href="modifyalb.php?album={$item.cat_albums[element].aid}" class="adm_menu">{$lang_album_admin_menu.modify}</a>
+                        <a href="modifyalbnew.php?album={$item.cat_albums[element].aid}" class="adm_menu">{$lang_album_admin_menu.modify}</a>
                       </td>
                       <td align="center" valign="middle" class="admin_menu">
                         <a href="editpics.php?album={$item.cat_albums[element].aid}" class="adm_menu">{$lang_album_admin_menu.edit_pics}</a>
