--- a/cpgNG/templates/common/thumbnail.html
+++ b/cpgNG/templates/common/thumbnail.html
@@ -1,3 +1,4 @@
+<img src="images/spacer.gif" width="1" height="17" alt=" "/><br />
 {if $thumbList.thumbCount eq 0}
 <!-- Start standard table -->
 <table align="center" width="100%" cellspacing="0" cellpadding="0" class="maintable">
