Added display filename under thumbnail configuration option
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@2056 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/themes/eyeball/style.css
+++ b/devel/themes/eyeball/style.css
@@ -336,6 +336,10 @@ a:hover {
         margin: 5px 0px;
 }
 
+.thumb_filename {
+        font-size: 80%;
+        display: block;
+}
 
 .thumb_title {
         font-weight : bold;
