--- a/devel/themes/fruity/style.css
+++ b/devel/themes/fruity/style.css
@@ -240,6 +240,11 @@ a:hover.yebg {
         margin: 5px 0px;
 }
 
+.thumb_filename {
+        font-size: 80%;
+        display: block;
+}
+
 .thumb_title {
         font-weight : bold;
         font-size: 9px;
