--- a/devel/themes/rainy_day/style.css
+++ b/devel/themes/rainy_day/style.css
@@ -212,6 +212,11 @@ bblink a:hover {
         margin: 5px 0px;
 }
 
+.thumb_filename {
+        font-size: 80%;
+        display: block;
+}
+
 .thumb_title {
         font-weight : bold;
         font-size: 80%;
