--- a/devel/themes/hardwired/style.css
+++ b/devel/themes/hardwired/style.css
@@ -255,6 +255,11 @@ bblink a:hover {
         margin: 5px 0px;
 }
 
+.thumb_filename {
+        font-size: 100%;
+        display: block;
+}
+
 .thumb_title {
         font-weight : bold;
         font-size: 100%;
