--- a/devel/themes/igames/style.css
+++ b/devel/themes/igames/style.css
@@ -399,6 +399,11 @@ a:hover {
         margin: 5px 0px;
 }
 
+.thumb_filename {
+        font-size: 100%;
+        display: block;
+}
+
 .thumb_title {
         font-weight : bold;
         font-size: 80%;
