--- a/devel/themes/core/style.css
+++ b/devel/themes/core/style.css
@@ -201,6 +201,23 @@ bblink a:hover {
         padding-left: 10px;
 }
 
+.catrow_noalb {
+        background: #D1D7DC ;
+        color : #000000;
+        padding-top: 3px;
+        padding-right: 10px;
+        padding-bottom: 3px;
+        padding-left: 10px;
+}
+
+.catrow {
+        background: #EFEFEF ;
+        padding-top: 3px;
+        padding-right: 10px;
+        padding-bottom: 3px;
+        padding-left: 10px;
+}
+
 .tableb_compact {
         background: #EFEFEF ;
         padding-top: 2px;
